# AgIsoVirtualTerminal

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: agisodevelepment_tools.yml  build.yml  linting.yml
cmake/: FindCAN_Stack.cmake  FindJUCE.cmake  Findcmake_git_version_tracking.cmake  Findgit_version.cmake
doc/: NSISLicenseInfo.txt
include/: ASCIILogFile.hpp  AckSettingsWindow.hpp  AlarmMaskAudio.h  AlarmMaskComponent.hpp  AppImages.h  ButtonComponent.hpp  ColourMapComponent.hpp  ConfigureHardwareComponent.hpp  ConfigureHardwareWindow.hpp  ContainerComponent.hpp  DataMaskComponent.hpp  DataMaskRenderAreaComponent.hpp  InputBooleanComponent.hpp  InputListComponent.hpp  InputNumberComponent.hpp  InputStringComponent.hpp  JuceManagedWorkingSetCache.hpp  KeyComponent.hpp  LoggerComponent.hpp  Main.hpp  ManufacturerMap.hpp  NumberComponent.hpp  ObjectPointerComponent.hpp  OutputEllipseComponent.hpp  OutputLineComponent.hpp  OutputLinearBarGraphComponent.hpp  OutputMeterComponent.hpp  OutputNumberComponent.hpp  OutputPolygonComponent.hpp  OutputRectangleComponent.hpp  OutputStringComponent.hpp  PictureGraphicComponent.hpp  ServerMainComponent.hpp  Settings.hpp  ShortcutsWindow.hpp  SoftKeyMaskComponent.hpp  SoftKeyMaskRenderAreaComponent.hpp  StringDrawingComponent.hpp  StringEncodingConversions.hpp  TextDrawingComponent.hpp  (+4 more)
src/: ASCIILogFile.cpp  AckSettingsWindow.cpp  AlarmMaskAudio.cpp  AlarmMaskComponent.cpp  AppImages.cpp  ButtonComponent.cpp  ConfigureHardwareComponent.cpp  ConfigureHardwareWindow.cpp  ContainerComponent.cpp  DataMaskComponent.cpp  DataMaskRenderAreaComponent.cpp  InputBooleanComponent.cpp  InputListComponent.cpp  InputNumberComponent.cpp  InputStringComponent.cpp  JuceManagedWorkingSetCache.cpp  KeyComponent.cpp  LoggerComponent.cpp  Main.cpp  NumberComponent.cpp  ObjectPointerComponent.cpp  ObjectPointerComponent.cpp.orig  OutputEllipseComponent.cpp  OutputLineComponent.cpp  OutputLinearBarGraphComponent.cpp  OutputMeterComponent.cpp  OutputNumberComponent.cpp  OutputPolygonComponent.cpp  OutputRectangleComponent.cpp  OutputStringComponent.cpp  OutputStringComponent.cpp.rej  PictureGraphicComponent.cpp  ServerMainComponent.cpp  Settings.cpp  ShortcutsWindow.cpp  SoftKeyMaskComponent.cpp  SoftkeyMaskRenderArea.cpp  StringDrawingComponent.cpp  StringEncodingConversions.cpp  TextDrawingComponent.cpp  (+4 more)
